--- a/.gitignore
+++ b/.gitignore
@@ -132,7 +132,7 @@ dmypy.json
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/frontend/node_modules/
 /.pnp
 .pnp.js
 
