--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,5 +43,12 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://192.168.1.45:8000/api/"
+  "proxy": "http://192.168.1.45:8000/api/",
+  "devDependencies": {
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.8",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "typescript": "^4.5.4"
+  }
 }
