--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,14 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-transition-group": "^1.1.8",
     "bootstrap": "^5.1.3",
     "crypto-js": "^4.1.1",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "socket.io-client": "^4.4.1",
