Refactor coommit: added abstract classes, fixed typehints

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,6 +7,6 @@ EXPOSE 80
 ENV IS_IN_DOCKER=true
 
 RUN pip3 install -r requirements.txt
-RUN python ./db/create_tables.py
+RUN python ./db/init_tables.py
 
 CMD ["uvicorn", "main:app", "--proxy-headers", "--host", "0.0.0.0", "--port", "8000"]
